<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.databricks</groupId>
  <artifactId>databricks-jdbc-parent</artifactId>
  <!-- This value may be modified by a release script to reflect the current version of the driver. -->
  <version>3.2.2-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Databricks JDBC Parent</name>
  <description>Parent POM for Databricks JDBC Driver.</description>
  <url>https://github.com/databricks/databricks-jdbc</url>

  <modules>
    <module>jdbc-core</module>
    <module>assembly-thin</module>
    <module>assembly-uber</module>
    <module>test-assembly-thin</module>
    <module>test-assembly-uber</module>
  </modules>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://github.com/databricks/databricks-jdbc/blob/main/LICENSE</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Databricks JDBC Team</name>
      <email>eng-oss-sql-driver@databricks.com</email>
      <organization>Databricks</organization>
      <organizationUrl>https://www.databricks.com</organizationUrl>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:https://github.com/databricks/databricks-jdbc.git</connection>
    <developerConnection>scm:git:https://github.com/databricks/databricks-jdbc.git</developerConnection>
    <url>https://github.com/databricks/databricks-jdbc</url>
  </scm>
  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/databricks/databricks-jdbc/issues</url>
  </issueManagement>

  <properties>
    <!-- Maven/Build Properties -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.deploy.skip>true</maven.deploy.skip>

    <!-- Plugin Versions -->
    <maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
    <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
    <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
    <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
    <dependency-check-maven.version>12.1.6</dependency-check-maven.version>
    <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
    <build-helper-maven-plugin.version>3.6.1</build-helper-maven-plugin.version>

    <!-- Dependency Versions -->
    <databricks-jdbc-version>3.2.2-SNAPSHOT</databricks-jdbc-version>
    <!-- Pinned for JDK 8 compatibility: Arrow 14+ requires Java 11 -->
    <arrow.version>13.0.0</arrow.version>
    <commons-lang3.version>3.18.0</commons-lang3.version>
    <commons-configuration.version>2.10.1</commons-configuration.version>
    <commons-io.version>2.14.0</commons-io.version>
    <databricks-sdk.version>0.69.0</databricks-sdk.version>
    <httpclient.version>4.5.14</httpclient.version>
    <async-httpclient.version>5.3.1</async-httpclient.version>
    <thrift.version>0.19.0</thrift.version>
    <slf4j.version>2.0.13</slf4j.version>
    <jackson.version>2.18.6</jackson.version>
    <gson.version>2.13.2</gson.version>
    <google.guava.version>33.0.0-jre</google.guava.version>
    <google.findbugs.annotations.version>3.0.1</google.findbugs.annotations.version>
    <immutables.value.version>2.9.2</immutables.value.version>
    <lz4-compression.version>1.8.1</lz4-compression.version>
    <annotation.version>1.3.5</annotation.version>
    <netty.version>4.2.6.Final</netty.version>
    <grpc.version>1.71.0</grpc.version>
    <resilience4j.version>1.7.0</resilience4j.version>
    <!-- Pinned for JDK 8 compatibility: nimbus-jose-jwt 10.x requires Java 11 -->
    <nimbusjose.version>9.47</nimbusjose.version>
    <bouncycastle.version>1.79</bouncycastle.version>
    <jmh.version>1.37</jmh.version>

    <!-- Test Dependencies -->
    <junit.jupiter.version>5.9.2</junit.jupiter.version>

    <!-- Pinned for JDK 8 compatibility: Mockito 5.x requires Java 11 -->
    <mockito.version>4.11.0</mockito.version>
    <sql-logic-test.version>0.3</sql-logic-test.version>

    <!-- Test Configuration -->
    <slt.executor>dbsql</slt.executor>
    <slt.token>dummy-token</slt.token>

  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven-jar-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${exec-maven-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.owasp</groupId>
          <artifactId>dependency-check-maven</artifactId>
          <version>${dependency-check-maven.version}</version>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco-maven-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-toolchains-plugin</artifactId>
          <version>${maven-toolchains-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>${build-helper-maven-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

  </build>

  <profiles>
    <profile>
      <!-- Local deploy for testing -->
      <id>local-deploy</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-deploy-plugin</artifactId>
            <version>2.8.2</version>
            <executions>
              <!-- Skip the default deploy execution -->
              <execution>
                <id>skip-default-deploy</id>
                <phase>deploy</phase>
                <goals>
                  <goal>deploy</goal>
                </goals>
                <configuration>
                  <skip>true</skip>
                </configuration>
              </execution>
              <!-- Use deploy-file goal to deploy with custom POM -->
              <execution>
                <id>deploy-with-custom-pom</id>
                <phase>deploy</phase>
                <goals>
                  <goal>deploy-file</goal>
                </goals>
                <configuration>
                  <file>${project.build.directory}/${project.build.finalName}.jar</file>
                  <pomFile>${project.basedir}/uber-minimal-pom.xml</pomFile>
                  <!-- Include other artifacts like sources and javadocs -->
                  <files>${project.build.directory}/${project.build.finalName}-thin.jar</files>
                  <types>jar</types>
                  <classifiers>thin</classifiers>
                  <!-- Use repository details from distributionManagement -->
                  <repositoryId>local-test-repo</repositoryId>
                  <url>file://${project.build.directory}/local-repo</url>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
              <doclint>none</doclint>
              <sourcepath>${project.build.sourceDirectory}:${project.build.directory}/generated-sources/annotations</sourcepath>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <configuration>
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
              <passphrase>${env.GPG_PASSPHRASE}</passphrase>
            </configuration>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <goals>
                  <goal>sign</goal>
                </goals>
                <phase>verify</phase>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.8.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <autoPublish>true</autoPublish>
              <waitUntil>published</waitUntil>
              <!-- Skip by default - assembly modules override this -->
              <skipPublishing>true</skipPublishing>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>